--- a/custom_error_403.html
+++ b/custom_error_403.html
@@ -5,307 +5,24 @@
   <meta charset="UTF-8">
   <title>403 Error - No Access</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="robots" content="index,follow">
-  <meta name="theme-color" content="#ff3a3a">
-  <meta name="revisit-after" content="2 days">
-  <meta name="description" content="This website is currently experiencing some down time.">
-  <meta name="keywords"
-    content="web design, web development, web, design, development, morgan, morganmx ,gmod, garry's mod, index, gmod web design, prometheus theme, mybb theme, landing page">
-  <meta name="author" content="Morgan.M#1111">
-  <meta name="designer" content="Morgan.M#1111">
-  <meta name="url" content="https://morganm.xyz">
-  <meta name="identifier-URL" content="https://morganm.xyz">
-  <meta name="og:title" content="Webpage Error" />
-  <meta name="og:type" content="service" />
-  <meta name="og:url" content="https://morganm.xyz" />
-  <meta name="og:image" content="https://morganm.xyz/app/img/logo.png" />
-  <meta name="twtter:image" content="https://morganm.xyz/app/img/logo.png" />
-  <meta name="og:description" content="High quality @ Low prices" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-touch-fullscreen" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="format-detection" content="telephone=no">
-  <link rel="shortcut icon" type="image/x-icon" href="https://morganm.xyz/app/img/logo.png" />
 
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=Ubuntu');
-
-    * {
-      margin: 0px auto;
-      padding: 0px;
-      text-align: center;
-    }
-
-    body {
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(http://www.hdnicewallpapers.com/Walls/Big/Abstract/Red_and_Blue_Smoke_Creative_Design_Wallpaper.jpg) no-repeat bottom center fixed;
-    }
-
-    .cont_principal {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    .cont_error {
-      position: absolute;
-      width: 100%;
-      height: 300px;
-      top: 50%;
-      margin-top: -150px;
-    }
-
-    .cont_error>h1 {
-      font-family: 'Ubuntu', sans-serif;
-      font-weight: 600;
-      font-size: 150px;
-      color: #fff;
-      position: relative;
-      left: -100%;
-      transition: all 0.5s;
-    }
-
-    .cont_error>button {
-      font-family: 'Ubuntu', sans-serif;
-      font-weight: 600;
-      color: #fff;
-      margin-bottom: -100%;
-      transition: all 0.5s;
-      transition-delay: 0.5s;
-    }
-
-
-    .cont_error>p {
-      font-family: 'Ubuntu', sans-serif;
-      font-weight: 500;
-      font-size: 50px;
-      letter-spacing: 1.5px;
-      color: #dadada;
-      position: relative;
-      left: 100%;
-      transition: all 0.5s;
-      transition-delay: 0.5s;
-      -webkit-transition: all 0.5s;
-      -webkit-transition-delay: 0.5s;
-    }
-
-    .cont_aura_1 {
-      position: absolute;
-      width: 300px;
-      height: 120%;
-      top: 25px;
-      right: -340px;
-      background-color: #ffffff;
-      box-shadow: 0px 0px 60px 20px rgba(0, 0, 0, 0.5);
-      -webkit-transition: all 0.5s;
-      transition: all 0.5s;
-    }
-
-    .cont_aura_2 {
-      position: absolute;
-      width: 100%;
-      height: 300px;
-      right: -10%;
-      bottom: -301px;
-      background-color: #ffffff;
-      box-shadow: 0px 0px 60px 10px rgba(0, 0, 0, 0.5), 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
-      z-index: 5;
-      transition: all 0.5s;
-      -webkit-transition: all 0.5s;
-    }
-
-
-    .cont_error_active>.cont_error>button {
-      margin-bottom: 0%;
-    }
-
-    .cont_error_active>.cont_error>h1 {
-      left: 0%;
-    }
-
-    .cont_error_active>.cont_error>p {
-      left: 0%;
-    }
-
-    .cont_error_active>.cont_aura_2 {
-      animation-name: animation_error_2;
-      animation-duration: 4s;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-      animation-direction: alternate;
-      transform: rotate(-20deg);
-    }
-
-    .cont_error_active>.cont_aura_1 {
-      transform: rotate(20deg);
-      right: -170px;
-      animation-name: animation_error_1;
-      animation-duration: 4s;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-      animation-direction: alternate;
-    }
-
-
-    .error_btn {
-      display: inline-block;
-      margin-right: 10px;
-      margin-left: 10px;
-      padding: 10px 30px;
-      border: 1px solid #fff;
-      border-radius: 4px;
-      -webkit-transition: background-color 300ms ease, border 300ms ease, color 300ms ease;
-      transition: background-color 300ms ease, border 300ms ease, color 300ms ease;
-      color: #fff;
-      line-height: 21px;
-      font-weight: 300;
-      letter-spacing: 2px;
-      text-decoration: none;
-      text-transform: uppercase;
-    }
-
-    @-webkit-keyframes animation_error_1 {
-      from {
-        -webkit-transform: rotate(20deg);
-        transform: rotate(20deg);
-      }
-
-      to {
-        -webkit-transform: rotate(25deg);
-        transform: rotate(25deg);
-      }
-    }
-
-    @-o-keyframes animation_error_1 {
-      from {
-        -webkit-transform: rotate(20deg);
-        transform: rotate(20deg);
-      }
-
-      to {
-        -webkit-transform: rotate(25deg);
-        transform: rotate(25deg);
-      }
-
-    }
-
-    @-moz-keyframes animation_error_1 {
-      from {
-        -webkit-transform: rotate(20deg);
-        transform: rotate(20deg);
-      }
-
-      to {
-        -webkit-transform: rotate(25deg);
-        transform: rotate(25deg);
-      }
-
-    }
-
-    @keyframes animation_error_1 {
-      from {
-        -webkit-transform: rotate(20deg);
-        transform: rotate(20deg);
-      }
-
-      to {
-        -webkit-transform: rotate(25deg);
-        transform: rotate(25deg);
-      }
-    }
-
-
-
-
-    @-webkit-keyframes animation_error_2 {
-      from {
-        -webkit-transform: rotate(-15deg);
-        transform: rotate(-15deg);
-      }
-
-      to {
-        -webkit-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-      }
-    }
-
-    @-o-keyframes animation_error_2 {
-      from {
-        -webkit-transform: rotate(-15deg);
-        transform: rotate(-15deg);
-      }
-
-      to {
-        -webkit-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-      }
-    }
-
-
-    @-moz-keyframes animation_error_2 {
-      from {
-        -webkit-transform: rotate(-15deg);
-        transform: rotate(-15deg);
-      }
-
-      to {
-        -webkit-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-      }
-    }
-
-    @keyframes animation_error_2 {
-      from {
-        -webkit-transform: rotate(-15deg);
-        transform: rotate(-15deg);
-      }
-
-      to {
-        -webkit-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-      }
-    }
-  </style>
-
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
 
   <div class="cont_principal">
     <div class="cont_error">
-
       <h1>403</h1>
-      <p>You do not have access to this page.</p>
-      <button class="btn error_btn" onclick="goBack()"><i class="fas fa-arrow-circle-left"></i> Go Back</button>
+      <p>No Access.</p>
+      <button class="btn error_btn" onclick="goBack()"></i> Go Back</button>
     </div>
     <div class="cont_aura_1"></div>
     <div class="cont_aura_2"></div>
   </div>
-
-
-
-
-  <script>
-    window.onload = function () {
-      document.querySelector('.cont_principal').className = "cont_principal cont_error_active";
-
-    }
-  </script>
-
-
-  <script>
-    function goBack() {
-      window.history.back()
-    }
-  </script>
-
 </body>
-
 </html>
